Fix blockquote colors in dark mode and link colors inside blockquotes
- Add darker color variables for custom blockquotes (tip, warning, danger) in dark mode
- Update dark mode to use the new darker colors instead of bright light mode colors
- Make hyperlinks inside blockquotes follow the title color instead of global link color

Resolves issue #3252

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -87,6 +87,15 @@ blockquote {
     h6 {
       color: var(--global-tip-block-title);
     }
+
+    a {
+      color: var(--global-tip-block-title);
+
+      &:hover {
+        color: var(--global-tip-block-title);
+        text-decoration: underline;
+      }
+    }
   }
 
   &.block-warning {
@@ -108,6 +117,15 @@ blockquote {
     h6 {
       color: var(--global-warning-block-title);
     }
+
+    a {
+      color: var(--global-warning-block-title);
+
+      &:hover {
+        color: var(--global-warning-block-title);
+        text-decoration: underline;
+      }
+    }
   }
 
   &.block-danger {
@@ -128,6 +146,15 @@ blockquote {
     h5,
     h6 {
       color: var(--global-danger-block-title);
+    }
+
+    a {
+      color: var(--global-danger-block-title);
+
+      &:hover {
+        color: var(--global-danger-block-title);
+        text-decoration: underline;
+      }
     }
   }
 }
